projects/uvdm-automation/empire.log
  File "/data/data/com.termux/files/home/projects/uvdm-automation/udvm_main.py.save.1", line 2
    print("
          ^
SyntaxError: unterminated string literal (detected at line 2)
